[package]
name = "kartanskala"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = {version = "*", features = [
"dynamic_linking",
"wayland"]}

geojson = "0.24.1"
bevy_2d_line = "0.1.3"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
